cabal-version:      2.4
name:               aoc2020
version:            0.1.0.0

executable aoc2020
    main-is:          Main.hs

    other-modules:
        Day01
        Day02
        Day03

    default-extensions:
        ScopedTypeVariables
        OverloadedStrings
        NamedFieldPuns
        RecordWildCards
        BlockArguments

    build-depends:
        base ^>=4.15.0.0,
        text

    hs-source-dirs:   app
    default-language: Haskell2010

    ghc-options:
        -fwarn-incomplete-patterns
