cabal-version:      2.4
name:               aoc2020
version:            0.1.0.0

executable aoc2020
    main-is:          Main.hs

    other-modules:
        Util
        Day01
        Day02
        Day03
        Day04
        Day05
        Day06
        Day07
        Day08

    default-extensions:
        ScopedTypeVariables
        OverloadedStrings
        NamedFieldPuns
        RecordWildCards
        BlockArguments
        ViewPatterns
        MultiWayIf

    build-depends:
        base ^>=4.15.0.0,
        text,
        containers

    hs-source-dirs:   app
    default-language: Haskell2010

    ghc-options:
        -fwarn-incomplete-patterns
        -fno-ignore-asserts
